--- a/src/components/grid_maker.css
+++ b/src/components/grid_maker.css
@@ -5,15 +5,25 @@
 .grid_container{
     display: grid;
     grid-template-columns: auto auto auto;
-    background-color: #2196F3;
-    padding: 10px;
     width: 100%;
     height: 100vh;
 }
-.grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
+.grid_item {
+    background-color: rgba(3, 3, 3, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
     font-size: 30px;
     text-align: center;
+    margin-top: 100px;
+    border: 1px solid white;
+}  
+.grid_image{
+    width: 27em;
+    height: 20em;
+    margin-top: 60px;
+    border-radius: 50px;
+}
+.name{
+    color: rgba(68, 198, 250, 0.842);
+    font-size: 40px;
+    background: rgba(0, 0, 0, 0.596);
 }
