--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,11 +1,11 @@
-header {
+/* header {
     padding: 10px 0;
     background-color: rgba(255, 0, 0, 0);
     margin-bottom: 5px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
     color: white;
     width: 100%;
-  }
+  } */
   
   
   header nav {
@@ -17,4 +17,6 @@ header {
     font-weight: bold;
     padding: 0 10px;
     margin: 0;
+    color: white;
+    font-size:30px;
   }
