--- a/src/components/grid_maker.css
+++ b/src/components/grid_maker.css
@@ -8,13 +8,8 @@
     width: 100%;
     height: 100vh;
 }
-.grid_item {
-    background-color: rgba(3, 3, 3, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    font-size: 30px;
-    text-align: center;
-    margin-top: 100px;
-    border: 1px solid white;
+.grid-item{
+    margin: 10px;
 }  
 .grid_image{
     width: 27em;
@@ -27,3 +22,5 @@
     font-size: 40px;
     background: rgba(0, 0, 0, 0.596);
 }
+
+/* @media(max-width:) */
